2001-07-03  Sam Steingold  <sds@gnu.org>

	tweak the 2001-06-27 patch
	* debug.d (read_form): ignore only whitespace

2001-06-29  Sam Steingold  <sds@gnu.org>

	command-oriented-history-2
	* constsym.d (*TERMINAL-READ-STREAM*): added
	* spvw.d (*TERMINAL-READ-STREAM*): define
	* stream.d (terminal_stream_p): use it
	* debug.d (read_form): bind it
	* io.d (string_reader): unbind *TERMINAL-READ-OPEN-OBJECT*
	in case of an error too

2001-06-27  Sam Steingold  <sds@gnu.org>

	command-oriented-history-1
	* constsym.d (*TERMINAL-READ-OPEN-OBJECT*): added
	* spvw.d (*TERMINAL-READ-OPEN-OBJECT*): define
	* lispbibl.d (terminal_stream_p): declare
	* stream.d (terminal_stream_p): define
	(rd_ch_terminal3): when *TERMINAL-READ-OPEN-OBJECT* is bound,
	add the new lines to the old history item
	(next_line_virtual, previous_line_virtual): readline helper
	functions
	(init_streamvars): bind them to M-p and M-n
	* io.d (read_token_1, read_delimited_list, string_reader): bind
	*TERMINAL-READ-OPEN-OBJECT*

2001-06-27  Sam Steingold  <sds@gnu.org>

	Fixed the win32/emacs bug when commands were ignored because of ^M
	* debug.d (read_form): use string_eqcomp_ci() instead of
	string_equal() and skip the extra chars in the line

2001-06-27  Sam Steingold  <sds@gnu.org>

	* stream.d (strip_white): new local function
	(rd_ch_terminal3): use it to trim the line

2001-06-27  Sam Steingold  <sds@gnu.org>

	non-whole byte i/o finally works
	* stream.d (rd_by_aux_icx_buffered): fixed (rewrote)

2001-06-25  Bruno Haible  <haible@clisp.cons.org>

	Optimize away local functions that are not used.
	* compiler.lisp (var): New slot 'fnode'.
	(fnode): New slots 'Tags', 'far-used-vars', 'far-assigned-vars',
	'far-used-blocks', 'far-used-tagbodys'.
	(note-far-used-var, note-far-assigned-var, note-far-used-block,
	note-far-used-tagbody, propagate-far-used): New functions.
	(c-VAR): If variable is defined in different fnode, store var
	for later propagation, instead of setting (var-closurep var).