@@ -1,3 +1,9 @@
+2001-07-09  Sam Steingold  <sds@gnu.org>
+
+	fixed the 2001-05-01 patch
+	* spvw.d (main): call set_ansi only
+	when -ansi or -traditional was given
+
 2001-07-03  Sam Steingold  <sds@gnu.org>
 
 	tweak the 2001-06-27 patch
